--- a/pom.xml
+++ b/pom.xml
@@ -17,19 +17,19 @@
 
 	<repositories>
 		<repository>
-			<id>nexus</id>
-			<url>http://tomas-pavel-pc.etnetera.mh.etn:8081/repository/maven-snapshots/</url>
+			<id>app-engine</id>
+			<url>https://kamenitxans-maven-repository.appspot.com</url>
 			<snapshots>
 				<updatePolicy>always</updatePolicy>
 			</snapshots>
 		</repository>
 	</repositories>
-
+	
 	<dependencies>
 		<dependency>
 			<groupId>cz.kamenitxan</groupId>
 			<artifactId>jakon</artifactId>
-			<version>0.2-20190902.160913-92</version>
+			<version>0.2-20190924.082248-9</version>
 		</dependency>
 	</dependencies>
 
